update to initial email export

--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -197,6 +197,63 @@
     }
   </style>
   <style type="text/css">
+    a:-webkit-any-link,
+    a:link {
+      color: inherit
+    }
+
+    a {
+      color: #e84e0f !important;
+    }
+
+    a[x-apple-data-detectors] {
+      color: #e84e0f !important;
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+    }
+    u + #body a {
+      color: #e84e0f !important;
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+    }
+    #MessageViewBody a {
+      color: #e84e0f !important;
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+    }
+
+    .cta-button a {
+      color: #ffffff !important;
+    }
+
+    .cta-buttona[x-apple-data-detectors] {
+      color: #ffffff !important;
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+    }
+    u + #body .cta-button a {
+      color: #ffffff !important;
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+    }
+    #MessageViewBody .cta-button a {
+      color: #ffffff !important;
+      font-size: inherit !important;
+      font-family: inherit !important;
+      font-weight: inherit !important;
+      line-height: inherit !important;
+    }
+
     H1,
     H2,
     H3,
@@ -408,11 +465,11 @@
     <lp-layout>
       <table align="center" background="images/hero-bg_light.png" border="0" cellpadding="0" cellspacing="0"
         role="presentation"
-        style="background:url(images/hero-bg_light.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%;background-color:#234793;">
+        style="background:url(images/hero-bg_light.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%;background-color:transparent;">
         <tbody>
           <tr>
             <td>
-              <!--[if mso | IE]><v:rect style="mso-width-percent:960;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+              <!--[if mso | IE]><v:rect style="mso-width-percent:980;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
               <div style="margin:0 auto;max-width:700px">
                 <div style="font-size:0;line-height:0">
                   <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -772,7 +829,7 @@
                                         <tr>
                                           <td align="center" bgcolor="#e84e0f" role="presentation"
                                             style="border:none;border-radius:0;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#e84e0f"
-                                            valign="middle"> <a href="https://www.dictator.nl/"
+                                            valign="middle" class="cta-button"> <a href="https://www.dictator.nl/"
                                               style="background:#e84e0f;color:#fff;display:inline-block;font-family:Mulish,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:uppercase;mso-padding-alt:0;border-radius:0"
                                               target="_blank"> <lp-singleline lp-label="Button">Lorem
                                                 ipsum</lp-singleline> </a> </td>
@@ -856,7 +913,7 @@
                                         <tr>
                                           <td align="center" bgcolor="#e84e0f" role="presentation"
                                             style="border:none;border-radius:0;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#e84e0f"
-                                            valign="middle"> <a href="https://google.com"
+                                            valign="middle" class="cta-button"> <a href="https://google.com"
                                               style="background:#e84e0f;color:#fff;display:inline-block;font-family:Mulish,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:uppercase;mso-padding-alt:0;border-radius:0"
                                               target="_blank"> <lp-singleline lp-label="Button">Lorem
                                                 ipsum</lp-singleline> </a> </td>
@@ -1167,7 +1224,7 @@
                                         <tr>
                                           <td align="center" bgcolor="#e84e0f" role="presentation"
                                             style="border:none;border-radius:0;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#e84e0f"
-                                            valign="middle"> <a href="https://google.com"
+                                            valign="middle" class="cta-button"> <a href="https://google.com"
                                               style="background:#e84e0f;color:#fff;display:inline-block;font-family:Mulish,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:uppercase;mso-padding-alt:0;border-radius:0"
                                               target="_blank"> <lp-singleline lp-label="Button">Lorem
                                                 ipsum</lp-singleline> </a> </td>
@@ -1213,7 +1270,7 @@
                                         <tr>
                                           <td align="center" bgcolor="#234793" role="presentation"
                                             style="border:none;border-radius:0;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#234793"
-                                            valign="middle"> <a href="https://google.com"
+                                            valign="middle" class="cta-button"> <a href="https://google.com"
                                               style="background:#234793;color:#fff;display:inline-block;font-family:Mulish,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:uppercase;mso-padding-alt:0;border-radius:0"
                                               target="_blank"> <lp-singleline lp-label="Button">Lorem
                                                 ipsum</lp-singleline> </a> </td>
@@ -1772,7 +1829,7 @@
                                         <tr>
                                           <td align="center" bgcolor="#e84e0f" role="presentation"
                                             style="border:none;border-radius:0;cursor:auto;mso-padding-alt:16px 24px 16px 24px;background:#e84e0f"
-                                            valign="middle"> <a href="https://google.com"
+                                            valign="middle" class="cta-button"> <a href="https://google.com"
                                               style="background:#e84e0f;color:#fff;display:inline-block;font-family:Mulish,Arial;font-size:16px;font-weight:700;line-height:20px;margin:0;padding:16px 24px;text-decoration:none;text-transform:uppercase;mso-padding-alt:0;border-radius:0"
                                               target="_blank"> <lp-singleline lp-label="Button">Klik
                                                 hier</lp-singleline> </a> </td>
@@ -2703,8 +2760,9 @@
                                                           style="font-size:0;padding:0;word-break:break-word">
                                                           <div
                                                             style="color:#fff;font-family:Mulish,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
-                                                            <lp-multiline> Florijn 13, 8305 BR Emmeloord +31 (0)527 61
-                                                              34 56 | info@dictator.nl</lp-multiline> </div>
+                                                            <lp-multiline> Florijn 13, 8305 BR Emmeloord
+                                                              <br/>
+                                                              +31 (0)527 61 34 56 | info@dictator.nl</lp-multiline> </div>
                                                         </td>
                                                       </tr>
                                                     </tbody>
@@ -2724,7 +2782,18 @@
                                                 <td style="padding:0;vertical-align:bottom">
                                                   <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                                     width="100%">
-                                                    <tbody></tbody>
+                                                    <tbody>
+                                                      <tr>
+                                                        <td align="left"
+                                                          style="font-size:0;padding:0;word-break:break-word">
+                                                          <div
+                                                            style="color:#fff;font-family:Mulish,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
+                                                            <lp-multiline> Florijn 13, 8305 BR Emmeloord
+                                                              <br/>
+                                                              +31 (0)527 61 34 56 | info@dictator.nl</lp-multiline> </div>
+                                                        </td>
+                                                      </tr>
+                                                    </tbody>
                                                   </table>
                                                 </td>
                                               </tr>
