--- a/Dictator/email.html
+++ b/Dictator/email.html
@@ -443,7 +443,7 @@
         <tbody>
           <tr>
             <td>
-              <!--[if mso | IE]><v:rect style="mso-width-percent:980;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+              <!--[if mso | IE]><v:rect style="mso-width-percent:1000;" xmlns:v="urn:schemas-microsoft-com:vml" fill="true" stroke="false"><v:fill origin="0.5, 0" position="0.5, 0" src="images/hero-bg_light.png" type="tile" size="auto,100%" /><v:textbox style="mso-fit-shape-to-text:true" inset="0,0,0,0"><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
               <div style="margin:0 auto;max-width:700px">
                 <div style="font-size:0;line-height:0">
                   <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -479,7 +479,7 @@
                                                             <td align="left"
                                                               style="font-size:0;padding:0 0 8px;word-break:break-word">
                                                               <div
-                                                                style="color:#e84e0f;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
+                                                                style="color:#fb6b37;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                                                 <lp-singleline lp-label="Intro titel"> [introtitel]
                                                                   Lorem ipsum</lp-singleline> </div>
                                                             </td>
@@ -1960,12 +1960,12 @@
                                         width="100%">
                                         <tbody>
                                           <tr>
-                                            <td align="center" style="font-size:0;padding:0;word-break:break-word">
+                                            <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:70px"> <img alt
+                                                    <td style="width:70px"> <img alt src="images/quote.png"
                                                         style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
                                                         width="70" height="auto"> </td>
                                                   </tr>
@@ -2133,10 +2133,10 @@
             <tbody>
               <tr>
                 <td style="direction:ltr;font-size:0;padding:0;text-align:center">
-                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#d3450d;background-color:#d3450d;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
+                      style="background:#d3450d;background-color:#d3450d;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:8px 24px;text-align:center">
@@ -2151,12 +2151,12 @@
                                         width="100%">
                                         <tbody>
                                           <tr>
-                                            <td align="center" style="font-size:0;padding:0;word-break:break-word">
+                                            <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:70px"> <img alt
+                                                    <td style="width:70px"> <img alt src="images/quote_white.png"
                                                         style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
                                                         width="70" height="auto"> </td>
                                                   </tr>
@@ -2176,10 +2176,10 @@
                       </tbody>
                     </table>
                   </div>
-                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#d3450d;background-color:#d3450d;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
+                      style="background:#d3450d;background-color:#d3450d;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
@@ -2214,10 +2214,10 @@
                       </tbody>
                     </table>
                   </div>
-                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#e84e0f" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-                  <div style="background:#e84e0f;background-color:#e84e0f;margin:0 auto;max-width:700px">
+                  <!--[if mso | IE]></td></tr></table></td></tr><tr><td class="" width="700px" ><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#D3450D" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+                  <div style="background:#d3450d;background-color:#d3450d;margin:0 auto;max-width:700px">
                     <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
-                      style="background:#e84e0f;background-color:#e84e0f;width:100%">
+                      style="background:#d3450d;background-color:#d3450d;width:100%">
                       <tbody>
                         <tr>
                           <td style="direction:ltr;font-size:0;padding:24px;text-align:center">
@@ -2342,12 +2342,12 @@
                                         width="100%">
                                         <tbody>
                                           <tr>
-                                            <td align="center" style="font-size:0;padding:0;word-break:break-word">
+                                            <td align="left" style="font-size:0;padding:0;word-break:break-word">
                                               <table border="0" cellpadding="0" cellspacing="0" role="presentation"
                                                 style="border-collapse:collapse;border-spacing:0">
                                                 <tbody>
                                                   <tr>
-                                                    <td style="width:70px"> <img alt
+                                                    <td style="width:70px"> <img alt src="images/quote_white.png"
                                                         style="border:0;display:block;font-size:13px;height:auto;outline:none;text-decoration:none;width:100%"
                                                         width="70" height="auto"> </td>
                                                   </tr>
@@ -2690,7 +2690,7 @@
                                                         <td align="left"
                                                           style="font-size:0;padding:0;word-break:break-word">
                                                           <div
-                                                            style="color:#e84e0f;font-family:Mulish,Arial;font-size:20px;font-weight:900;line-height:24px;text-align:left;text-decoration:none;text-transform:uppercase">
+                                                            style="color:#fb6b37;font-family:Mulish,Arial;font-size:20px;font-weight:900;line-height:24px;text-align:left;text-decoration:none;text-transform:uppercase">
                                                             <lp-singleline> CONTACTGEGEVENS</lp-singleline> </div>
                                                         </td>
                                                       </tr>
@@ -2905,7 +2905,8 @@
                                                           <div
                                                             style="color:#fff;font-family:Mulish,Arial;font-size:16px;font-weight:400;line-height:24px;text-align:left;text-decoration:none">
                                                             <lp-multiline> Bezoek onze website voor meer informatie <br>
-                                                              <a href="https://www.dictator.nl">www.dictator.nl</a>
+                                                              <a href="https://www.dictator.nl"
+                                                                style="color:#fb6b37;font-weight:700;text-decoration:none">www.dictator.nl</a>
                                                             </lp-multiline> </div>
                                                         </td>
                                                       </tr>
