heading fallback font

--- a/Dictator/email.html
+++ b/Dictator/email.html
@@ -594,7 +594,7 @@
                                   <div
                                     style="color:#e84e0f;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                     <h3
-                                      style="font-family:Mulish;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
+                                      style="font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
                                       <lp-singleline lp-label="Inhoudsopgave"> Inhoudsopgave</lp-singleline> </h3>
                                   </div>
                                 </td>
@@ -700,7 +700,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:40px;font-weight:900;line-height:48px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h1
-                                        style="font-family:Mulish;font-size:40px;font-weight:900;line-height:48px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:40px;font-weight:900;line-height:48px;text-transform:uppercase">
                                         <lp-singleline> H1 titel</lp-singleline> </h1>
                                     </div>
                                   </td>
@@ -739,7 +739,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
-                                        style="font-family:Mulish;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
                                         <lp-singleline> H2 titel</lp-singleline> </h2>
                                     </div>
                                   </td>
@@ -778,7 +778,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
-                                        style="font-family:Mulish;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Titel</lp-singleline> </h2>
                                     </div>
                                   </td>
@@ -847,7 +847,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
-                                        style="font-family:Mulish;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h2>
                                     </div>
@@ -932,7 +932,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
-                                        style="font-family:Mulish;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Tekstblok met inline afbeelding
                                           rechts</lp-singleline> </h2>
                                     </div>
@@ -991,7 +991,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h2
-                                        style="font-family:Mulish;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Tekstblok met inline afbeelding
                                           links</lp-singleline> </h2>
                                     </div>
@@ -1100,7 +1100,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Mulish;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h3>
                                     </div>
@@ -1291,7 +1291,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Mulish;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h3>
                                     </div>
@@ -1349,7 +1349,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Mulish;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h3>
                                     </div>
@@ -1416,7 +1416,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Mulish;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h3>
                                     </div>
@@ -1489,7 +1489,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h3
-                                        style="font-family:Mulish;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:28px;font-weight:900;line-height:34px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h3>
                                     </div>
@@ -1784,7 +1784,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-align:center;text-decoration:none;text-transform:uppercase">
                                       <h2
-                                        style="font-family:Mulish;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:32px;font-weight:900;line-height:38px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Call to action blok</lp-singleline> </h2>
                                     </div>
                                   </td>
@@ -1900,7 +1900,7 @@
                                     <div
                                       style="color:#e84e0f;font-family:Mulish,Arial;font-size:20px;font-weight:900;line-height:24px;text-align:left;text-decoration:none;text-transform:uppercase">
                                       <h5
-                                        style="font-family:Mulish;font-size:20px;font-weight:900;line-height:24px;text-transform:uppercase">
+                                        style="font-family:Mulish,Arial;font-size:20px;font-weight:900;line-height:24px;text-transform:uppercase">
                                         <lp-singleline lp-label="Titel"> Lorem ipsum dolor sit amet.</lp-singleline>
                                       </h5>
                                     </div>
