Added lp-repeater padding top

--- a/Dictator/default.html
+++ b/Dictator/default.html
@@ -471,7 +471,7 @@
         </tbody>
       </table>
     </lp-layout>
-    <lp-layout>
+    <lp-layout lp-label="Hero">
       <table align="center" background="images/hero-bg_light.png" border="0" cellpadding="0" cellspacing="0"
         role="presentation"
         style="background:url(images/hero-bg_light.png) top/auto 100% repeat;background-position:top;background-repeat:repeat;background-size:auto 100%;width:100%;background-color:transparent;">
@@ -607,7 +607,8 @@
           </tr>
         </tbody>
       </table>
-    </lp-layout><lp-layout lp-label="Inhoudsopgave">
+    </lp-layout>
+    <lp-layout lp-label="Inhoudsopgave">
       <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
       <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -688,7 +689,44 @@
           </tr>
         </tbody>
       </table>
-    </div> <!--[if mso | IE]></td></tr></table><![endif]--> <lp-repeater><lp-layout lp-label="H1">
+    </div> 
+    <!--[if mso | IE]></td></tr></table><![endif]--> 
+    <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
+      <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
+        style="background:#fff;background-color:#fff;width:100%">
+        <tbody>
+          <tr>
+            <td style="direction:ltr;font-size:0;padding:0 24px;text-align:center">
+              <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:middle;width:652px;" ><![endif]-->
+              <div class="mj-column-per-100 mj-outlook-group-fix"
+                style="direction:ltr;display:inline-block;font-size:0;text-align:left;vertical-align:middle;width:100%">
+                <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                  <tbody>
+                    <tr>
+                      <td style="padding:0;vertical-align:middle">
+                        <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
+                          <tbody>
+                            <tr>
+                              <td style="font-size:0;padding:0;word-break:break-word">
+                                <div style="height:24px;line-height:24px">&#8202;</div>
+                              </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div> 
+    <!--[if mso | IE]></td></tr></table><![endif]-->
+    <lp-repeater>
+      <lp-layout lp-label="H1">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -727,7 +765,8 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="H2">
+      </lp-layout>
+      <lp-layout lp-label="H2">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -2553,7 +2592,8 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="Spacer - 16">
+      </lp-layout>
+      <lp-layout lp-label="Spacer - 16">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -2587,7 +2627,8 @@
             </tbody>
           </table>
         </div> <!--[if mso | IE]></td></tr></table><![endif]-->
-      </lp-layout><lp-layout lp-label="Spacer - 24">
+      </lp-layout>
+      <lp-layout lp-label="Spacer - 24">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
           <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation"
@@ -2620,7 +2661,8 @@
               </tr>
             </tbody>
           </table>
-        </div> <!--[if mso | IE]></td></tr></table><![endif]-->
+        </div> 
+        <!--[if mso | IE]></td></tr></table><![endif]-->
       </lp-layout><lp-layout lp-label="Spacer - 48">
         <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="" role="presentation" style="width:700px;" width="700" bgcolor="#ffffff" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
         <div style="background:#fff;background-color:#fff;margin:0 auto;max-width:700px">
